fix: security edit